--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.admin.sap"
-        minSdkVersion 21
+        applicationId "com.example.admin.asc"
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
